# causal-inference-in-python-code

./: README.md  pyproject.toml
data/: email_rnd_data.csv  management_training.csv  prime_card.csv  sb_exp_opt.csv
notebook/: 0. 시뮬레이션 데이터.ipynb  01장-인과추론 소개.ipynb  02장-무작위 실험 및 기초 통계 리뷰.ipynb  03장-그래프 인과모델.ipynb  04장-유용한 선형회귀.ipynb  05장-성향점수.ipynb  06장-이질적 처치효과.ipynb  07장-메타러너.ipynb  08장-이중차분법.ipynb  09장-통제집단합성법.ipynb  10장-지역 실험과 스위치백 실험.ipynb  11장-불응과 도구변수.ipynb  Part1_CausalInference.ipynb
